updated deprecated newInstance calls